Add 2 buttons to toggle physics and dragging

--- a/ddgtopicsexplorer/src/app/app.component.html
+++ b/ddgtopicsexplorer/src/app/app.component.html
@@ -12,7 +12,9 @@
 </div>
 
 <div id="result">
-{{currentSearch}}
+  {{currentSearch}}
+  <button (click)="togglePhysics()">Toggle Autofix position</button>
+  <button (click)="toggleDragMode()">Toggle Drag Mode</button>
   <div id="ddgTopicNetwork"></div>
 
 </div>
