--- a/ddgtopicsexplorer/src/app/app.component.css
+++ b/ddgtopicsexplorer/src/app/app.component.css
@@ -1,5 +1,5 @@
 #ddgTopicNetwork {
-  width: 600px;
-  height: 400px;
-  border: 1px solid lightgray;
+  width: 100%;
+  height:90%;
+  border: 1px solid black;
 }
