--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,16 @@
 #ddgTopicNetwork {
   width: 100%;
-  height:90%;
-  border: 1px solid black;
+  height: 100%;
+  border: 0px;
+  margin: 0px !important;
+  padding: 0px !important;
+  float: left;
+  z-index: 0;
+  position: fixed;
+}
+
+#toolbar {
+  z-index: 0;
+  position: absolute;
+  float: left;
 }
